Fix clipping of label for slider.

--- a/components/workspace/prop/PropVotePanel.module.css
+++ b/components/workspace/prop/PropVotePanel.module.css
@@ -67,7 +67,7 @@
 	transition: 0.3s;
 
 	overflow-x: visible;
-	overflow-y: clip;
+	overflow-y: hidden;
 }
 
 .contentContainer.expanded {
